# heimisch

./: .actrc  .aiderignore  .gitignore  .gitmodules  Cargo.toml  package.json  pnpm-lock.yaml  rustc-ice-2025-01-14T05_53_11-34075.txt  rustc-ice-2025-02-13T11_42_50-54470.txt  tailwind.config.js
backend/: .env  Cargo.toml  diesel.toml  error.rs
backend/migrations/2024-10-09-111956_create_users/: down.sql  up.sql
backend/migrations/2024-10-09-113832_create_temp_auths/: down.sql  up.sql
backend/migrations/2024-10-22-134541_create_installations/: up.sql
backend/migrations/2024-10-25-100053_add_last_in_touch_at_and_webhooks/: down.sql  up.sql
backend/migrations/2024-10-26-074404_rename_users_to_login_users/: down.sql  up.sql
backend/migrations/2024-10-26-080927_create_github_users/: up.sql
backend/migrations/2024-11-03-064701_add/: down.sql  up.sql
backend/migrations/2024-11-04-084950_use_i64_for_webhook_id/: down.sql  up.sql
backend/migrations/2024-11-04-091050_fkey_rnship_bn_webhooks_and_installations/: down.sql  up.sql
backend/migrations/2024-11-04-091342_rename_installation_id/: down.sql  up.sql
backend/migrations/2024-11-04-092448_add_webhook_event/: down.sql
backend/migrations/2024-11-05-175658_fkey_rnship_bn_installations_and_users/: down.sql  up.sql
backend/migrations/2024-11-30-025903_sessions/: up.sql
backend/src/: app_state.rs  auth_backend.rs  config.rs  custom_github_api.rs  error.rs  file_and_error_handler.rs  hookup_endpoint.rs  main.rs  pg_session_store.rs  session_and_auth.rs  sessions.rs  utils.rs  websocket_updates_bucket.rs
backend/src/axum_helpers/extractors/: authenticated_user.rs  header.rs  mod.rs
backend/src/config/: github_auth.rs  mod.rs
backend/src/controllers/: mod.rs  sse_updates.rs  websocket_updates.rs
backend/src/controllers/api/: app_installs.rs  auth.rs  github_hooks.rs  installations.rs  mod.rs  websocket_updates.rs
backend/src/db/: installations.rs  login_users.rs  mod.rs  schema.rs  sessions.rs  temp_auths.rs  webhooks.rs
backend/src/tests/: endpoint_test_client.rs  mod.rs  parse_request.rs
backend/test_fixtures/: issue_comment_webhook.request
cli/: Cargo.toml  diesel.toml
cli/migrations/2024-10-16-104834_initial/: up.sql
cli/src/: consts.rs  error.rs  main.rs  schema.rs  utils.rs
cli/src/auth/: mod.rs
cli/src/db/: mod.rs
diesel-test/: Cargo.toml
diesel-test/src/: lib.rs  postgres.rs
macros_impl/: Cargo.toml
macros_impl/src/: avail_merge.rs  leptos_test_setup.rs  lib.rs  table.rs  tracing_to_console_log.rs  typed_db.rs  typesafe_idb.rs
macros_impl/src/typed_router/: enum_impl.rs  main_model.rs  mod.rs  parsing.rs  write_output.rs
macros_impl/src/zwang_router/: main_model.rs  mod.rs  parsing.rs  path.rs
macros_impl/src/zwang_router/path/: tests.rs
macros_impl/src/zwang_router/routes/: main_model.rs  mod.rs  parsing.rs  write_output.rs
meta_tools/: Cargo.toml
meta_tools/src/: main.rs
meta_tools/src/webhook_desc_to_rust/: mod.rs  t1.rs  t1_to_t2.rs  tests.rs
meta_tools/src/webhook_desc_to_rust/t2/: mod.rs  postprocess.rs  type_ref.rs
meta_tools/src/webhook_desc_to_rust/t2_to_json_schema/: mod.rs  t2_to_schema_context.rs
shared/: Cargo.toml  heimisch
shared/src/: avail.rs  consts.rs  lib.rs  random.rs  retry.rs  utils.rs
shared/src/backend_api_trait/: mod.rs
shared/src/db_trait/: idb_impl.rs  mod.rs
shared/src/endpoints/: endpoint.rs  endpoint_client.rs  endpoint_request.rs  mod.rs  utils.rs
shared/src/github_api_trait/: actual_impl.rs  mod.rs  tests.rs  trait_defn.rs
shared/src/sync_engine/: changes.rs  ensure_initial_sync_issue_comments.rs  ensure_initial_sync_issues.rs  ensure_initial_sync_one_repository.rs  ensure_initial_sync_repositories.rs  ensure_initial_sync_repository.rs  error.rs  fetch_repositorys_for_installation_id.rs  kick_off.rs  mod.rs  monotonic_time.rs  new_defn.rs  non_empty_2d_map.rs  optimistic_change_map.rs  optimistic_changes.rs  optimistic_update.rs  registry.rs  storage.rs  storage_traits.rs  tests.rs  typed_transport.rs  typed_websocket_client.rs
shared/src/sync_engine/conversions/: conversion_error.rs  (+13 more)
shared/src/test_setup/: mod.rs
shared/src/typed_db/: idb_impl.rs  mod.rs  raw_traits.rs
shared/src/types/: github_app.rs  installation.rs  installation_access_token_row.rs  installation_initial_sync_status.rs  issue.rs  issue_comment.rs  issue_comment_initial_sync_status.rs  issue_initial_sync_status.rs  issues_initial_sync_status.rs  label.rs  last_webhook_update_at.rs  license.rs  milestone.rs  mod.rs  pull_request.rs  pull_request_initial_sync_status.rs  pull_request_labels_item.rs  repository.rs  repository_initial_sync_status.rs  team.rs  team_organization.rs  user.rs
shared/tests/: test.rs
typed_db/: Cargo.toml
typed_db/src/: idb_impl.rs  lib.rs  raw_traits.rs  sqlite_impl.rs
typed_db/src/sqlite_impl/: mod.rs  tests.rs
typesafe_idb/: Cargo.toml
typesafe_idb/src/: chain.rs  db.rs  error.rs  index.rs  lib.rs  object_store.rs  serde_abstraction.rs  store.rs  txn.rs  txn_valid_for_store.rs
typesafe_idb/tests/: test.rs
typesafe_idb/tests/ui/: read_from_store_not_in_txn.rs  read_from_store_not_in_txn.stderr  read_only_txn_for_reaad_write_method.rs  read_only_txn_for_reaad_write_method.stderr  txn_for_store_not_in_db.rs  txn_for_store_not_in_db.stderr
utils/: Cargo.toml
utils/src/: async_runtime.rs  execute_nicely.rs  filter_bt.rs  hashmap_ext.rs  json_nicely.rs  just_send.rs  lib.rs
web/: Cargo.toml  Trunk.toml  index.html
web/src/: consts.rs  frontend.rs  frontend_error.rs  idb_signal.rs  idb_signal_from_sync_engine.rs  lib.rs  local_storage.rs  main.rs  signal_ext.rs  sync_engine_storage.rs  tests.rs  typed_transport.rs  typed_websocket_client.rs  use_unwrapped_context.rs  utils.rs  websocket_updates.rs
web/src/app/: auth.rs  error_component.rs  icon.rs  installation_id_sync.rs  loading.rs  mod.rs  not_found.rs  routing.rs  sidebar.rs  sync_engine_provider.rs  thirds.rs
web_hydrate/: Cargo.toml
web_hydrate/src/: lib.rs
zwang_router/: Cargo.toml
zwang_router/src/: lib.rs  slashed_and_segmented.rs
(+1956 files in other folders)
