[workspace]
resolver = "2"
members = [
    "shared",
    "backend",
    "cli",
    "web",
    "utils",
    "diesel-test",
    "meta_tools",
    "github_webhook_body",
    "macros",
    "macros_impl",
    "github_api",
    "typesafe_idb",
    "reqwest_wiremock",
    "zwang_router",
    "leptos_testing_utils", "typed_db",
]

[[workspace.metadata.leptos]]
# project name
name = "heimisch"
bin-package = "backend"
lib-package = "web_hydrate"
tailwind-input-file = "style/tailwind_input.css"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "0.0.0.0:3210"

site-pkg-dir = "pkg"


# The site root folder is where cargo-leptos generate all output.
# NOTE: It is relative to the workspace root when running in a workspace.
# WARNING: all content of this folder will be erased on a rebuild!
#
# Optional, defaults to "/site" in the Cargo target directory. Env: LEPTOS_SITE_ROOT.
site-root = "target/site"

# The port to use for automatic reload monitoring
reload-port = 3211

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets/assets"
