[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared =  { path = "../shared", features = ["ssr"] }
utils =  { path = "../utils" }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.4", features = ["postgres", "serde_json", "time", "uuid"] }
diesel-derive-newtype = { version = "2.1.2" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "smallvec", "tracing-log"], default-features = false }
async-trait = "0.1.83"
http = "1.1.0"
rand = "0.8.5"
url = { version = "2.5.2", features = ["serde"] }
reqwest = { version = "0.12.8", features = ["json"] }
github_webhook_body = { path = "../github_webhook_body" }

leptos = { version = "=0.7.0-rc1", features = ["nightly", "ssr", "tracing"] }
leptos_axum = { version = "=0.7.0-rc1" }
web = { path = "../web", default-features = false, features = [ "ssr" ] }
dotenvy = "0.15.7"
backtrace = "0.3.74"
jsonwebtoken = "9.3.0"
diesel_test = { path = "../diesel-test" }
parking_lot = "0.12.3"
axum-test = "16.3.0"
anyhow = "1.0.92"
bytes = "1.8.0"
derive_more = { version = "1.0.0", features = ["display", "error"] }
assert-json-diff = "2.0.2"
github_api = { path = "../github_api" }
jiff = "0.1.14"
axum-typed-websockets = { version = "0.6.0", features = ["json"] }
futures = "0.3.31"
tower-sessions = "0.13.0"
uuid = "1.11.0"
opaque-debug = "0.3.1"
axum-login = "0.16.0"
