[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
diesel = { version = "2.2.4", features = ["sqlite", "time", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.8", features = ["json"] }
shellexpand = "3.1.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
