[package]
name = "diesel_test"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
deadpool = "0.12.1"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.4", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
futures = "0.3.31"
itertools = "0.13.0"
parking_lot = "0.12.3"
pg-connection-string = "0.0.2"
tokio = { version = "1.41.0", features = ["full"] }
tokio-postgres = "0.7.12" # I don't think there's a way to avoid a transaction in diesel, which means no DROP DATABASE.
