[package]
name = "macros_impl"
version = "0.0.0"
edition = "2021"

[dependencies]
convert_case = "0.6.0"
darling = "0.20.10"
itertools = "0.13.0"
proc-macro2 = "1.0.89"
quote = "1.0.37"
serde = { version = "1.0.215", features = ["derive"] }
syn = { version = "2.0.87", features = ["fold", "extra-traits", "full"] }
