[package]
name = "meta_tools"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
assert-json-diff = "2.0.2"
clap = { version = "4.5.20", features = ["derive"] }
convert_case = "0.6.0"
itertools = "0.13.0"
ordered-float = "4.4.0"
quote = "1.0.37"
schemars = "0.8.21"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_path_to_error = "0.1.16"
strum = { version = "0.26.3", features = ["derive"] }
# typify = "0.2.0"
typify = { path = "../../typify/typify" , version = "*" }
