[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
url = { version = "2.5.2", features = ["serde"] }
github_webhook_body = { path = "../github_webhook_body" }
derive_more = { version = "1.0.0", features = ["as_ref", "deref", "display", "error", "from", "into", "constructor"] }
jiff = { version = "*", default-features = false, features = ["serde", "alloc", "std"] }
serde_json = "1.0.132"
tracing = "0.1.40"
github_api = { path = "../github_api" }
macros = { path = "../macros" }
wasm_testing_utils = { path = "../wasm_testing_utils" }
typesafe_idb = { path = "../typesafe_idb", optional = false }
utils = { path = "../utils" }
idb = { version = "*", optional = false }
idalloc = "0.1.1"
parking_lot = "0.12.3"
send_wrapper = "0.6.0"
futures = "0.3.31"
codee = { version = "0.2.0", features = ["json_serde"] }
diesel-derive-newtype = { version = "2.1.2", optional = true }
diesel = { version = "2.2.4", optional = true }
http = "1.1.0"
ewebsock = "0.8.0"
pin-project = "1.1.7"
serde_urlencoded = "0.7.1"
leptos = { version = "*", optional = true }
web-sys = { version = "*", optional = true, default-features = false, features = ["Performance"] }
any_spawner = "0.2.0"
tracing-subscriber = "0.3.19"
bon = "3.3.2"
mockall = "0.13.1"
maplit = "1.0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[features]
hydrate = [ "jiff/js", "leptos", "web-sys" ]
ssr = [
	"dep:diesel-derive-newtype",
	"dep:diesel",
	"github_api/ssr",
]

# Otherwise (nightly) rust complains about `[wasm_bindgen_test]`
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
