[package]
name = "typed_db"
version = "0.1.0"
edition = "2024"

[dependencies]
derivative = "2.2.0"
idb = { version = "0.6.4", optional = true }
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
wasm-bindgen = { version = "*", optional = true }
js-sys = { version = "*", optional = true }
send_wrapper = { version = "0.6.0", optional = true, features = ["futures"] }

[features]
idb = ["dep:idb", "dep:wasm-bindgen", "dep:js-sys", "dep:send_wrapper"]
sqlite = ["rusqlite", "serde_json"]
