[package]
name = "typed_db"
version = "0.1.0"
edition = "2024"

[dependencies]
derivative = "2.2.0"
idb = { version = "0.6.4", optional = true }
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0" }
wasm-bindgen = { version = "*", optional = true }
js-sys = { version = "*", optional = true }
utils = { path = "../utils", optional = true }

[features]
idb = ["dep:idb", "dep:wasm-bindgen", "dep:js-sys", "dep:utils", "utils/hydrate"]
sqlite = ["rusqlite"]
