[package]
name = "utils"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
backtrace = "0.3.74"
futures = "*"
pin-project = "1.0"
reqwest = "0.12.8"

serde = "1.0.210"
serde_json = "1.0.132"
tokio = { version = "1.47.1", default-features = false }
url = "2.5.2"
wasm-bindgen-futures = "0.4.51"

[features]
ssr = []
hydrate = []
