[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]

# This specific combination of versions for leptos and thaw was selected simply because it's the one
# that compiles :).
# https://discord.com/channels/1031524867910148188/1290135091179294730/1290404436321112084
leptos = { version = "0.7.8", features = ["nightly", "tracing", "csr"] }
leptos_reactive = { version = "*" } 
leptos_router = { version = "0.7.8", features = ["nightly"] }
wasm-bindgen = { version = "0.2.100", default-features = false }
web-sys = { version = "*", default-features = false, features = ["Window", "Clipboard",
"Navigator", "Storage", "WebSocket"] }
tracing = "0.1.40"
url = "2.5.2"
github_api = { path = "../github_api" }

wasm-bindgen-futures = "0.4.43"

shared = { path = "../shared", default-features = false, features = ["hydrate"] }
macros = { path = "../macros" }
zwang_router = { path = "../zwang_router" }
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_urlencoded = "0.7.1"
serde_json = "1.0.132"
typed_db = { path = "../typed_db", features = ["idb"] }
parking_lot = "0.12.3"
futures = "0.3.31"
js-sys = "0.3.72"
heck = "0.5.0"
strum_macros = "0.26.4"
derive_more = { version = "1.0.0", features = ["display", "from_str"] }
strum = "0.26.3"
send_wrapper = { version = "*", features = ["futures"] }
itertools = "0.13.0"
jiff = { version = "*", default-features = false, features = ["serde", "alloc", "std", "js"] }
codee = "0.2.0"
icondata = { version = "0.5.0", default-features = false, features = ["heroicons"] }
icondata_core = "0.1.0"
pin-project = "1.1.7"
gloo-net = { version = "0.6.0", default-features = false, features = ["websocket"] }
gloo-utils = { version = "0.2.0", default-features = false, features = ["serde"] }
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"
timeago = "0.4.2"
idb = "0.6.4"

[dev-dependencies]
tracing-subscriber = "0.3.19"
tracing-subscriber-wasm = "0.1.0"
tracing-test = "0.2.5"
wasm-bindgen-test = "0.3.50"
leptos_testing_utils = { path = "../leptos_testing_utils" }

[features]
default = []
tracing = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
