[package]
name = "web_hydrate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web = { path = "../web", version = "*", features = ["hydrate"] }
leptos = { version = "0.7", features = ["hydrate", "nightly"] }
wasm-bindgen = { version = "0.2.93", default-features = false }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
